--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -317,8 +317,8 @@ div.no-menu {
   margin-right: 2em;
 }
 
-#main p.contact a span.gmaps {
-  background: transparent url("../images/googlemaps.jpg") no-repeat;
+#main p.contact a.gmaps {
+  background: transparent url("../images/googlemaps.png") no-repeat;
   text-indent: -9999px;
   display: inline-block;
   width: 7em;
